# OpencascadeViewer

./: CMakeLists.txt  README.md  examples.cpp  examples.h  labeldelegate.cpp  labeldelegate.h  labelindex.cpp  labelindex.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ocafapp.cpp  ocafapp.h  ocafdelegatemodel.cpp  ocafdelegatemodel.h  ocaftreedialog.cpp  ocaftreedialog.h  ocaftreedialog.ui  qtosgwidget.cpp  qtosgwidget.h
